# django-snacks

snacks_project/: pyproject.toml
snacks_project/chocolate/: apps.py  urls.py  views.py
snacks_project/snacks/: tests.py  urls.py  views.py
snacks_project/snacks_project/: settings.py  urls.py
snacks_project/static/css/:  style.css
snacks_project/template/: chocolate_home.html  snacks-about.html  snacks-base.html  snacks-home.html
