[tool.poetry]
name = "django_snacks"
version = "0.1.0"
description = ""
authors = ["Dana Al-Abbade <abbadidana91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
